# notify-me-sempai

./: .gitignore  pyproject.toml
notify_me_sempai/: __main__.py  base.py
notify_me_sempai/common/: __init__.py
notify_me_sempai/dispatcher/: __init__.py
notify_me_sempai/poller/: __init__.py
notify_me_sempai/server/: __init__.py
